<resources>
    <string name="app_name">Factory Machine Monitoring System</string>
    <string name="app_name2">Factory Machine Monitoring System</string>
    <string name="breakdown_history">Breakdown History</string>
    <string name="machine_id">Machine ID</string>
    <string name="line">Line</string>
    <string name="line_colon">Line : </string>
    <string name="station">Station</string>
    <string name="repair_time_start">Repair Time Start</string>
    <string name="repair_time_finish">Repair Time Finish</string>
    <string name="repair_duration">Repair Duration</string>
    <string name="colon">:</string>
    <string name="machine_id_colon">Machine ID : </string>
    <string name="detail_report_title">Detail Report</string>
    <string name="station_colon">Station : </string>
    <string name="pic_colon">PIC : </string>
    <string name="repair_date_start_colon">Repair Date Start :</string>
    <string name="repair_date_finish_colon">Repair Date Finish :</string>
    <string name="duration_colon">Duration :</string>
    <string name="problem_image_title">Problem Image</string>
    <string name="solution_image_title">Solution Image</string>
    <string name="problem_image">Problem Image</string>
    <string name="solution_image">Solution Image</string>
    <string name="user_id_hint">USER ID</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_hint">Login</string>
    <string name="main_dashboard">Main Dashboard</string>
    <string name="factory_machine_monitoring_system">Factory Machine Monitoring System</string>
    <string name="andon_factory_monitoring_system">Andon Factory Monitoring System</string>
    <string name="machine_dashboard_title">Machine Dashboard</string>
    <string name="insert_pic_id">Insert PIC ID</string>
    <string name="pic_search">PIC Search</string>


    //Bottom Navigation Bar
    <string name="title_reportactivity">Report Activity</string>
    <string name="title_maindashboard">Main Dashboard</string>
    <string name="title_problemwaitinglist">Problem List</string>

    //Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">History</string>
    <string name="menu_slideshow">Report</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Export</string>
    <string name="survey">Survey</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="answer">Answer</string>
    <string name="what_is_your_job_title_department">What is your job title / department?</string>
    <string name="what_is_your_company_name">What is your company name?</string>
    <string name="what_is_your_e_mail">What is your e-mail?</string>
    <string name="what_is_your_phone_number">What is your phone number?</string>
    <string name="what_kind_of_application_interest_you">What kind of application interest you?</string>
    <string name="augmented_reality_ar">Augmented Reality (AR)</string>
    <string name="virtual_reality_vr">Virtual Reality (VR)</string>
    <string name="monitoring_system_with_iiot_platform">Monitoring System with IIOT Platform</string>
    <string name="smart_glass">Smart Glass</string>
    <string name="implement">Do you have a plan to implement similar application in your factory?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>

    <string name="drawer_item_option1">Option 1</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_logout">Log out</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Option 2</string>
    <string name="drawer_item_option3">Option 3</string>
    <string name="action_logout">action_logout</string>
    <string name="title_machinereport">Machine Report</string>
    <string name="pic_double_dot">PIC :</string>
    <string name="asset_management">Asset Management</string>
    <string name="_00">0/0</string>
    <string name="machine_dashboard">Machine Dashboard</string>
    <string name="profile_picture">profile_picture</string>
    <string name="problem_waiting_list">Problem Waiting List</string>
    <string name="machine_report_center">Machine Report Center</string>
    <string name="report_activity_center">Report Activity Center</string>
    <string name="asset_management_center">Asset Management Center</string>
    <string name="refresh">Refresh</string>
    <string name="machine_dashboard_capital">MACHINE DASHBORD</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="today_s_progress">Today\'s Progress</string>
    <string name="n_a">N/A</string>
    <string name="menu">Menu</string>
    <string name="machine_problem_detected">Machine Problem Detected</string>
    <string name="take_problem_picture">Take Problem Picture</string>
    <string name="problem_description">Problem Description</string>
    <string name="solution_description">Solution Description</string>
    <string name="take_solution_picture">Take Solution Picture</string>
    <string name="pic">PIC</string>
    <string name="duration_double_dot">Duration :</string>
    <string name="date_start">Date Start</string>
    <string name="date_start_double_dot">Date Start :</string>
    <string name="id">ID</string>
    <string name="machine_id_double_dot">Machine ID :</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="take_profile_picture">Take Profile Picture</string>
    <string name="confirm">Confirm</string>
    <string name="warning_sign">Warning Sign</string>
    <string name="line_doubledot">Line :</string>
    <string name="station_doubledot">Station :</string>
    <string name="machine_dashboard_mcb_vrla">Machine Dashboard MCB-VRLA</string>
    <string name="doubledot_finish_repair">: Finish Repair</string>
    <string name="doubledot_repair_on_progress">: Repair on Progress</string>
    <string name="doubledot_breakdown">: Breakdown</string>
    <string name="doubledot_running">: Running</string>
    <string name="repair_on_progress">Repair on Progress</string>
    <string name="breakdown">Breakdown</string>
    <string name="running">Running</string>
    <string name="finish_repair">Finish Repair</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="line_4">Line 4</string>
    <string name="line_5">Line 5</string>
    <string name="line_6">Line 6</string>
    <string name="line_7">Line 7</string>
    <string name="line_8">Line 8</string>
    <string name="line_9">Line 9</string>
    <string name="line_10">Line 10</string>
    <string name="line_11">Line 11</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="part_list">Part List</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="lifetime_hour">Lifetime (Hour)</string>
    <string name="machine_part_list">Machine Part List</string>
    <string name="quantity">Quantity</string>
    <string name="date_register">Date Register</string>
    <string name="next_replacement">Next Replacement</string>
</resources>
