<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/detail_report_title"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/MachineID1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/machine_id_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/MachineID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Title"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/MachineID1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/MachineID1"
            android:layout_marginStart="20dp"
            android:text="@string/line_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/MachineID"
            android:layout_toEndOf="@id/Line1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Station1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line1"
            android:layout_marginStart="20dp"
            android:text="@string/station_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line"
            android:layout_toEndOf="@id/Station1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/PIC1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Station1"
            android:layout_marginStart="20dp"
            android:text="@string/pic_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Station"
            android:layout_toEndOf="@id/PIC1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/RepairTimeStart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/PIC1"
            android:layout_marginStart="20dp"
            android:text="@string/repair_date_start_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RepairTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeStart1"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/RepairTimeFinish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeStart"
            android:layout_marginStart="20dp"
            android:text="@string/repair_date_finish_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RepairTimeFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeFinish1"
            android:layout_marginStart="20dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeFinish"
            android:layout_toEndOf="@id/Duration1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Duration1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeFinish"
            android:layout_marginStart="20dp"
            android:text="@string/duration_colon"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TitleImageProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Duration1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/problem_image_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TitleImageProblem"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ProgressBar
                android:id="@+id/pbbarReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/NoProblem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/ImageProblem"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/problem_image" />
        </RelativeLayout>

        <TextView
            android:id="@+id/DescImageProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/problem"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TitleImageSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/DescImageProblem"
            android:layout_centerHorizontal="true"
            android:text="@string/solution_image_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TitleImageSolution"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ProgressBar
                android:id="@+id/pbbarSolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/NoSolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/ImageSolution"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/solution_image" />
        </RelativeLayout>

        <TextView
            android:id="@+id/DescImageSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/solution"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>