<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/RelativeLayoutHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/RepairTimeStart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/repair_time_start"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/RepairTimeFinish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeStart1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/repair_time_finish"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Duration1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeFinish1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/repair_duration"
            android:textSize="15sp"
            android:textStyle="" />

        <TextView
            android:id="@+id/Line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Duration1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/line"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Station1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/station"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/RelativeLayoutHistory">

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/colon1"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/colon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/colon2"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/colon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/colon3"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/colon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/colon4"
            android:layout_marginBottom="5dp"
            android:text="@string/colon"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeHistoryData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/colon"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/RepairTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/RepairTimeFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeStart"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RepairTimeFinish"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Duration"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line"
            android:layout_marginBottom="5dp"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>